--- a/package.json
+++ b/package.json
@@ -4,8 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "babel src -d lib",
+    "init": "node lib/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "joseph@vano.io",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.13.3",
+    "gulp": "^3.9.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.3.17",
+    "babel-core": "^6.3.26",
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "del": "^2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
+    "gulp-rename": "^1.2.2",
+    "vinyl-source-stream": "^1.1.0"
+  }
 }
