--- a/package.json
+++ b/package.json
@@ -4,26 +4,36 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -d lib",
-    "init": "node lib/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp",
+    "start": "node lib/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pack": "webpack --progress --colors"
   },
   "author": "joseph@vano.io",
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.3",
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "jquery": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
     "babel-core": "^6.3.26",
+    "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
+    "css-loader": "^0.23.1",
     "del": "^2.2.0",
+    "file-loader": "^0.8.5",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-rename": "^1.2.2",
-    "vinyl-source-stream": "^1.1.0"
+    "gulp-webpack": "^1.5.0",
+    "node-sass": "^3.4.2",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.11",
+    "webpack-stream": "^3.1.0"
   }
 }
