--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   "author": "joseph@vano.io",
   "license": "ISC",
   "dependencies": {
+    "angular2": "^2.0.0-beta.1",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.13",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
-    "jquery": "^2.2.0"
+    "jquery": "^2.2.0",
+    "reflect-metadata": "^0.1.2",
+    "rxjs": "^5.0.0-beta.0",
+    "zone.js": "^0.5.10"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.1",
+    "babel-plugin-syntax-decorators": "^6.3.13",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
