--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "build": "gulp",
     "start": "node lib/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "pack": "webpack --progress --colors"
+    "pack": "webpack --progress --colors",
+    "watch:pack": "webpack --progress --colors --watch"
   },
   "author": "joseph@vano.io",
   "license": "ISC",
   "dependencies": {
-    "angular2": "^2.0.0-beta.1",
+    "angular2": "^2.0.0-beta.13",
+    "bootstrap-sass": "^3.3.6",
+    "core-js": "^2.2.2",
     "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.13",
+    "es6-shim": "^0.35.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
-    "jquery": "^2.2.0",
+    "jquery": "^1.11.0",
     "reflect-metadata": "^0.1.2",
-    "rxjs": "^5.0.0-beta.0",
-    "zone.js": "^0.5.10"
+    "rxjs": "^5.0.0-beta.2",
+    "typescript": "^1.8.9",
+    "typescript-loader": "^1.1.3",
+    "zone.js": "^0.6.9"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
@@ -29,17 +34,22 @@
     "babel-plugin-syntax-decorators": "^6.3.13",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.7.2",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
+    "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-webpack": "^1.5.0",
     "node-sass": "^3.4.2",
+    "nodemon": "^1.9.1",
     "raw-loader": "^0.5.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "ts-loader": "^0.8.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.11",
     "webpack-stream": "^3.1.0"
