--- a/package.json
+++ b/package.json
@@ -13,18 +13,16 @@
   "author": "joseph@vano.io",
   "license": "ISC",
   "dependencies": {
-    "angular2": "^2.0.0-beta.13",
+    "angular2": "^2.0.0-beta.14",
     "bootstrap-sass": "^3.3.6",
     "core-js": "^2.2.2",
     "es6-promise": "^3.0.2",
-    "es6-shim": "^0.35.0",
+    "es6-shim": "0.35.0",
     "express": "^4.13.3",
-    "gulp": "^3.9.0",
     "jquery": "^1.11.0",
-    "reflect-metadata": "^0.1.2",
-    "rxjs": "^5.0.0-beta.2",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
     "typescript": "^1.8.9",
-    "typescript-loader": "^1.1.3",
     "zone.js": "^0.6.9"
   },
   "devDependencies": {
